spark/overlays/kind/sh-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-history
  namespace: spark
spec:
  selector:
    matchLabels:
      app: spark-history
  template:
    metadata:
      labels:
        app: spark-history
    spec:
      # Used to ensure that the bucket is created ahead of time.
      containers:
        - name: spark-history
          image: wbassler/spark-aws:3.1.2
          imagePullPolicy: IfNotPresent
          args:
            - /opt/spark/bin/spark-class
            - -Dspark.history.fs.logDirectory=s3a://$(BUCKET)/logs/
            - org.apache.spark.deploy.history.HistoryServer
          volumeMounts:
            - name: config-volume
              mountPath: /opt/spark/conf/spark-defaults.conf
              subPath: spark-defaults.conf
          ports:
            - name: http
              protocol: TCP
              containerPort: 18080
            - name: blockmanager
              containerPort: 7777
              protocol: TCP
            - name: driver
              containerPort: 2222
              protocol: TCP
      serviceAccountName: spark-history
      volumes:
        - name: config-volume
          configMap:
            name: spark-history-configmap
