spark/overlays/kind/sh-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-history-ingress
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: spark-history
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: spark-history-service
              port:
                number: 18080
